--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,4 +1,5 @@
 {% extends "app/layout.html" %}
+{% load staticfiles %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -138,6 +139,10 @@
 {% endblock %}
 
 {% block scripts %}
+
+    <script src="{% static 'app/scripts/flot/jquery.flot.min.js' %}"></script>
+<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/js/flot/excanvas.min.js"></script><![endif]-->   
+    <script src="{% static 'app/scripts/flot/jquery.flot.pie.min.js' %}"></script>
 
 <script type="text/javascript">
 
