--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -40,15 +40,14 @@
     <script src="{% static 'app/scripts/jquery-1.10.2.min.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.min.js' %}"></script>
     <script src="{% static 'app/scripts/respond.min.js' %}"></script>
-    <script src="{% static 'app/scripts/flot/jquery.flot.min.js' %}"></script>
-<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/js/flot/excanvas.min.js"></script><![endif]-->   
-    <script src="{% static 'app/scripts/flot/jquery.flot.pie.min.js' %}"></script>
 
     <script src="{% static 'app/scripts/site.js' %}"></script>
+    <script src="{% static 'app/scripts/bootstrap-notify.js' %}"></script>
     {% include 'session_security/all.html' %}
+    
     {% if user.is_authenticated %}
         {% swampdragon_settings %}
-        <script type="text/javascript" src="{% static 'swampdragon/js/dist/swampdragon.js' %}"></script>
+        <script type="text/javascript" src="{% static 'swampdragon/js/dist/swampdragon.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'swampdragon/js/legacy/swampdragon-vanilla.js' %}"></script>
         <script type="text/javascript" src="{% static 'swampdragon/js/legacy/swampdragon.js' %}"></script>
         <script src="{% static 'app/scripts/notifications.js' %}"></script>
