--- a/app/templates/app/sidebar.html
+++ b/app/templates/app/sidebar.html
@@ -28,7 +28,7 @@
         {% if current_quiz_list %}<!--current quiz list-->
             <li role="presentation" class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-                    New Quizzes <span class="caret"></span>
+                    New Quizzes <span class="badge">{{current_quiz_list|length}}</span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
                     {% for quiz in current_quiz_list %}
@@ -44,7 +44,7 @@
         {% if current_wordcloud_list %}
             <li role="presentation" class="dropdown {% current 'wordcloud' %}">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-                    New Wordclouds <span class="caret"></span>
+                    New Wordclouds <span class="badge">{{current_wordcloud_list|length}}</span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
                     {% for wordcloud in current_wordcloud_list %}
