--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,4 +1,5 @@
 {% extends "app/layout.html" %}
+{% load staticfiles %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -139,102 +140,22 @@
 
 {% block scripts %}
 
-<script type="text/javascript">
-
-
-
-
-	function plot_confidence(data) {
-	    flot_data = []
-	    Object.keys(data).forEach(function (key) {
-	    	var value = data[key]
-	    	color = ''
-	    	/* place in each if statement to prevent key 'current' from being in the graph */
-	    	if (key=='good') {
-	    		color="#5cb85c"
-	    		flot_data.push({label: key, data: value, color: color})
-	    	}
-	    	if (key=='neutral') {
-	    		color="#f0ad4e"
-	    		flot_data.push({label: key, data: value, color: color})
-	    	}
-	    	if (key=='bad') {
-	    		color="#d9534f"
-	    		flot_data.push({label: key, data: value, color: color})
-	    	}
-	    });
-		$.plot('#confidence-graph', flot_data, {
-	    series: {
-	        pie: {
-	            show: true
-	        	}
-	    	}
-	    });
-	}
+	<script src="{% static 'app/scripts/admin_site.js' %}"></script>
+	<script>
+		function addQuickSelectHandlers() {
+			$("#quick_lecture_select").change(function(data) {
+				quick_update('lecture', this.options[this.selectedIndex].value, "{{csrf_token}}")
+			});
+			$("#quick_quiz_select").change(function(data) {
+				quick_update('quiz', this.options[this.selectedIndex].value, "{{csrf_token}}")
+			});
+			$("#quick_wordcloud_select").change(function(data) {
+				quick_update('wordcloud', this.options[this.selectedIndex].value, "{{csrf_token}}")
+			});
+		}
+		$(document).ready(addQuickSelectHandlers);
+	</script>
 	
-	var ping_interval = 1000*15
-    setInterval(function() {
-        $.ajax({
-	        type: "GET",
-	        url:  "/poll/",
-	        dataType: 'json',
-	        success: function (data) {
-	        	plot_confidence(data)
-	        },
-	        error: function(response){
-	        },
-    	});
-        }, ping_interval
-    )
-
-    function quick_update(data_id, value) {
-    	data = {
-    		'csrfmiddlewaretoken': '{{csrf_token}}',
-    		'quick_settings': 'Submit',
-    	}
-    	data[data_id] = value
-    	$.ajax({
-		        type: "POST",
-		        url:  "/quick_update/",
-		        dataType: 'json',
-		        data: data,
-		        success: function (data) {
-		        	if (data.return_type == 'lecture') {
-		        		$('#id_Lecture').attr("value", data.return_value);	
-		        	}
-		        	if (data.return_type == 'quiz') {
-		        		$("#quick_quiz_select option[value='" + data.return_value + "']").remove();
-		        	}
-		        	if (data.return_type == 'wordcloud') {
-		        		$("#quick_wordcloud_select option[value='" + data.return_value + "']").remove();
-		        	}
-		        	if (typeof data.notice !== 'undefined') {
-		        		close_button = 	'<button type="button" class="close" data-dismiss="alert" aria-label="Close">' +
-										'<span aria-hidden="true">&times;</span>' +
-										'</button>'
-		        		$("#admin_alerts").html('<div class="alert alert-success alert-dismissable" role="alert">' + data.notice + close_button + '</div>')
-		        	}
-		        },
-		        error: function(response){
-		        },
-    		});
-    }
-
-    function addQuickSelectHandlers() {
-		$("#quick_lecture_select").change(function(data) {
-			quick_update('lecture', this.options[this.selectedIndex].value)
-		});
-		$("#quick_quiz_select").change(function(data) {
-			quick_update('quiz', this.options[this.selectedIndex].value)
-		});
-		$("#quick_wordcloud_select").change(function(data) {
-			quick_update('wordcloud', this.options[this.selectedIndex].value)
-		});
-
-	}
-
-	$(document).ready(addQuickSelectHandlers);
-</script>
 {% endblock %}
 
 {% block sidebar %}
