fixed dashboard bug for now, added debug toolbar, minified css and js

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -124,7 +124,7 @@
 
 {% block scripts %}
 
-	<script src="{% static 'app/scripts/admin_site.js' %}"></script>
+	<script src="{% static 'app/scripts/admin_site.min.js' %}"></script>
 	<script>
 		function addQuickSelectHandlers() {
 			$("#quick_lecture_select").change(function(data) {
