--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMSUNSW</title>
     
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/sidebar.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/sidebar.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/animate.min.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     {% block extrahead %}{% endblock %}
@@ -44,7 +44,7 @@
 <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/js/flot/excanvas.min.js"></script><![endif]-->   
     <script src="{% static 'app/scripts/flot/jquery.flot.pie.min.js' %}"></script>
 
-    <script src="{% static 'app/scripts/site.js' %}"></script>
+    <script src="{% static 'app/scripts/site.min.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap-notify.min.js' %}"></script>
 
     {% include 'session_security/all.html' %}
