--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -125,6 +125,10 @@
 {% block scripts %}
 
 	<script src="{% static 'app/scripts/admin_site.min.js' %}"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
+
+<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/js/flot/excanvas.min.js"></script><![endif]-->   
+    <script src="{% static 'app/scripts/flot/jquery.flot.pie.min.js' %}"></script>
 	<script>
 		function addQuickSelectHandlers() {
 			$("#quick_lecture_select").change(function(data) {
