--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMSUNSW</title>
-    
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/sidebar.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/animate.min.css' %}" />
-    <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     {% block extrahead %}{% endblock %}
 </head>
 
@@ -37,14 +38,13 @@
                 </div>
         </div>
         {% endif %}
-    <script src="{% static 'app/scripts/jquery-1.10.2.min.js' %}"></script>
-    <script src="{% static 'app/scripts/bootstrap.min.js' %}"></script>
-    <script src="{% static 'app/scripts/respond.min.js' %}"></script>
-    <script src="{% static 'app/scripts/flot/jquery.flot.min.js' %}"></script>
-<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/js/flot/excanvas.min.js"></script><![endif]-->   
-    <script src="{% static 'app/scripts/flot/jquery.flot.pie.min.js' %}"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
 
     <script src="{% static 'app/scripts/site.min.js' %}"></script>
+    
     <script src="{% static 'app/scripts/bootstrap-notify.min.js' %}"></script>
 
     {% include 'session_security/all.html' %}
