--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -1,10 +1,15 @@
 ﻿{% load staticfiles %}
+{% load cache %}
+
 <!DOCTYPE html>
+{% cache 30 head %}
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>LMSUNSW</title>
+    
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -14,7 +19,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     {% block extrahead %}{% endblock %}
 </head>
-
+{% endcache %}
 <body>
     {% include "app/navbar.html" %}
         {% if user.is_authenticated %}
@@ -39,18 +44,22 @@
         </div>
         {% endif %}
 
+{% cache 30 scripts %}
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
 
     <script src="{% static 'app/scripts/site.min.js' %}"></script>
-    
+
     <script src="{% static 'app/scripts/bootstrap-notify.min.js' %}"></script>
 
     {% include 'session_security/all.html' %}
+
+{% endcache %}
     
     {% if user.is_authenticated and not "admin" in current_url %}
-    
+
     <!-- ensure refreshes only occur when logged in and not in admin view-->
         <script>
             /* updates the confidence meter periodically */
@@ -64,3 +73,5 @@
 {% block scripts %}{% endblock %}
 </body>
 </html>
+
+
