--- a/app/templates/admin/delete_confirmation.html
+++ b/app/templates/admin/delete_confirmation.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "admin/admin_layout.html" %}
 {% load i18n admin_urls %}
 
 
@@ -30,8 +30,4 @@
     </div>
     </form>
 {% endif %}
-{% endblock %}
-
-{% block sidebar %}
-    {% include "admin/sidebar.html" %}
 {% endblock %}
