--- a/app/templates/admin/delete_selected_confirmation.html
+++ b/app/templates/admin/delete_selected_confirmation.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "admin/admin_layout.html" %}
 {% load i18n l10n admin_urls %}
 
 
@@ -37,7 +37,4 @@
     </div>
     </form>
 {% endif %}
-{% endblock %}
-{% block sidebar %}
-    {% include "admin/sidebar.html" %}
 {% endblock %}
