--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "admin/admin_layout.html" %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
@@ -166,6 +166,3 @@
 	
 {% endblock %}
 
-{% block sidebar %}
-    {% include "admin/sidebar.html" %}
-{% endblock %}
