--- a/app/templates/app/create_thread.html
+++ b/app/templates/app/create_thread.html
@@ -1,12 +1,8 @@
-{% extends "app/layout.html" %}
+{% extends "app/authenticated_layout.html" %}
 {% load crispy_forms_tags %}
 
 {% block content %}
 <div class="well">
 {% crispy form %}
 </div>
-{% endblock %}
-
-{% block sidebar %}
-    {% include "app/sidebar.html" %}
 {% endblock %}
