--- a/app/templates/app/lecture_slide.html
+++ b/app/templates/app/lecture_slide.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "app/authenticated_layout.html" %}
 
 {% block content %}
 
@@ -8,6 +8,3 @@
 
 {% endblock %}
 
-{% block sidebar %}
-    {% include "app/sidebar.html" %}
-{% endblock %}
