--- a/app/templates/admin/app/change_list.html
+++ b/app/templates/admin/app/change_list.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "admin/admin_layout.html" %}
 {% load i18n admin_urls admin_static admin_list templatetag %}
 
 {% block extrahead %}
@@ -53,8 +53,4 @@
 		
 	</div>
 
-{% endblock %}
-
-{% block sidebar %}
-	{% include "admin/sidebar.html" %}
 {% endblock %}
