--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,8 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "app/authenticated_layout.html" %}
 
 {% block content %}
-{% endblock %}
-
-{% block sidebar %}
-    {% include "app/sidebar.html" %}
 {% endblock %}
