--- a/app/templates/app/lecture.html
+++ b/app/templates/app/lecture.html
@@ -1,4 +1,4 @@
-﻿{% extends "app/layout.html" %}
+﻿{% extends "app/authenticated_layout.html" %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -7,8 +7,4 @@
     {% else %}
         No Document Linked!
     {% endif %}
-{% endblock %}
-
-{% block sidebar %}
-    {% include "app/sidebar.html" %}
 {% endblock %}
