--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "app/authenticated_layout.html" %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -36,8 +36,4 @@
 	</div>
 </div>
 
-{% endblock %}
-
-{% block sidebar %}
-    {% include "app/sidebar.html" %}
 {% endblock %}
