--- a/app/templates/app/thread.html
+++ b/app/templates/app/thread.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+{% extends "app/authenticated_layout.html" %}
 
 {% block content %}
 
@@ -42,8 +42,4 @@
 	</div>
 </div>
 
-{% endblock %}
-
-{% block sidebar %}
-    {% include "app/sidebar.html" %}
 {% endblock %}
