--- a/app/templates/app/authenticated_layout.html
+++ b/app/templates/app/authenticated_layout.html
@@ -1,4 +1,5 @@
 {% extends "app/layout.html" %}
+{% load staticfiles %}
 
 {% block content %}
 
@@ -9,10 +10,12 @@
 {% endblock %}
 
 {% block extrahead %}
-	
+	<link rel="stylesheet" type="text/css" href="{% static 'app/content/sidebar.min.css' %}" />
 {% endblock %}
 
 {% block scripts %}
+<script src="{% static 'app/scripts/site.min.js' %}"></script>
+
     <!-- ensure refreshes only occur when logged in and not in admin view-->
         <script type="text/javascript">
             /* updates the confidence meter periodically */
