--- a/app/templates/admin/app/change_list.html
+++ b/app/templates/admin/app/change_list.html
@@ -1,7 +1,7 @@
 {% extends "admin/admin_layout.html" %}
 {% load i18n admin_urls admin_static admin_list templatetag %}
 
-{% block extrahead %}
+{% block extrahead %}{{ block.super }}
 
 
 	{% if action_form %}
