--- a/app/templates/app/confidence_meter.html
+++ b/app/templates/app/confidence_meter.html
@@ -1,8 +1,8 @@
 
 <div id="progress-bar" class="progress">
-    <div id="progress-bar-good" class="progress-bar progress-bar-success" style='width: {{ good }}%'></div>
-    <div id="progress-bar-neutral" class="progress-bar progress-bar-warning" style='width: {{ neutral }}%'></div>
-    <div id="progress-bar-bad" class="progress-bar progress-bar-danger" style='width: {{ bad }}%'></div>
+    <div id="progress-bar-good" class="progress-bar progress-bar-success" style='width: {{ good_confidence_meter_data }}%'></div>
+    <div id="progress-bar-neutral" class="progress-bar progress-bar-warning" style='width: {{ neutral_confidence_meter_data }}%'></div>
+    <div id="progress-bar-bad" class="progress-bar progress-bar-danger" style='width: {{ bad_confidence_meter_data }}%'></div>
 </div>
 <div id="confidence-btn" class="col-md-4 col-sm-4">
     <button id="good-btn" type="button" class="btn btn-success btn-block">
