fixed create user permissions

--- a/app/templates/admin/admin_layout.html
+++ b/app/templates/admin/admin_layout.html
@@ -6,7 +6,11 @@
 {% endblock %}
 
 {% block sidebar %}
+	{% if user.is_superuser %}
     {% include "admin/sidebar.html" %}
+    {% else %}
+    {% include "app/sidebar.html" %}
+    {% endif %}
 {% endblock %}
 
 {% block extrahead %}
