fixed sidebar on user settings page

--- a/app/templates/admin/admin_layout.html
+++ b/app/templates/admin/admin_layout.html
@@ -18,7 +18,8 @@
 {% endblock %}
 
 {% block scripts %}{{ block.super }}
-<script src="{% static 'app/scripts/admin_site.js' %}"></script>
+<script src="{% static 'app/scripts/site.min.js' %}"></script>
+<script src="{% static 'app/scripts/admin_site.min.js' %}"></script>
 
 {% endblock %}
 
