--- a/app/templates/app/authenticated_layout.html
+++ b/app/templates/app/authenticated_layout.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'app/scripts/site.js' %}"></script>
+<script src="{% static 'app/scripts/site.min.js' %}"></script>
 
     <!-- ensure refreshes only occur when logged in and not in admin view-->
         <script type="text/javascript">
