further caching, moved user permissions into post_save signal

--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -34,8 +34,8 @@
                     <div class="footer">
                         <hr>
                         <footer>
-                            {% if num_sessions %}
-                                Number of users online: {{ num_sessions }}
+                            {% if session_count %}
+                                Number of users online: {{ session_count }}
                             {% endif %}
                         </footer>
                     </div>
