updated password_recovery page, fixed couple of bugs

--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -22,7 +22,7 @@
         {{form|crispy}}
         <div class="row">
             <div class="col-xs-4">
-                <a href="{% url 'password_reset_recover' %}">Forgot Password</a>
+                <a href="{% url 'forgot_password' %}">Forgot Password</a>
                 <a href="{% url 'createuser' %}">Register</a>
             </div>
             <div class="col-xs-4">
