--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -25,7 +25,7 @@
     {% if user.is_authenticated %}
     <div class="navbar-collapse collapse">
     	<ul class="nav navbar-nav navbar-left" style="margin-left: 130px;">
-    		{% if current_lecture.lecture_slide %}<!--if lecture slides are available-->
+    		{% if lecture_slide_exists %}<!--if lecture slides are available-->
                 <li class="{% current 'lecture_slide' %}">
                     <a href="{% url 'lecture_slide' current_lecture.id current_lecture.slug %}">Lecture Slides</a>
                 </li>
