--- a/app/templates/app/forgot_password.html
+++ b/app/templates/app/forgot_password.html
@@ -14,7 +14,8 @@
         <p>
             But don't worry!
         </p>
-        <p>Account identity is not a priority, so long as you can log in, its all good.
+        <p>
+            Account identity is not a priority, but don't forget your password too many times.
         </p>
 
         <a class="btn btn-primary btn-lg" href="{% url 'createuser' %}" role="button">Create Another</a>
