updated pie chart display

--- a/app/templates/admin/admin_layout.html
+++ b/app/templates/admin/admin_layout.html
@@ -19,7 +19,7 @@
 
 {% block scripts %}{{ block.super }}
 <script src="{% static 'app/scripts/site.min.js' %}"></script>
-<script src="{% static 'app/scripts/admin_site.min.js' %}"></script>
+<script src="{% static 'app/scripts/admin_site.js' %}"></script>
 
 {% endblock %}
 
