--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -24,6 +24,15 @@
 			</div>
 		</div>
 		<div class="panel panel-body" id="confidence-meter-panel">
+			<div id="good_confidence_meter_data">
+				
+			</div>
+			<div id="neutral_confidence_meter_data">
+
+			</div>
+			<div id="bad_confidence_meter_data">
+				
+			</div>
 			<div id="confidence-graph" style="width:100%;height:300px"></div>
 		</div>
 	</div>
