fixed student settings security bug, readded profile link, started personal_collab_doc

--- a/app/templates/app/dump.html
+++ b/app/templates/app/dump.html
@@ -1,4 +1,5 @@
 <p><a href="{% url 'dump' 'user' %}">Dump user</a></p>
+<p><a href="{% url 'dump' 'userprofile' %}">Dump userprofile</a></p>
 <p><a href="{% url 'dump' 'lecture' %}">Dump lecture</a></p>
 <p><a href="{% url 'dump' 'lecturematerial' %}">Dump lecturematerial</a></p>
 <p><a href="{% url 'dump' 'quiz' %}">Dump quiz</a></p>
