--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -54,6 +54,9 @@
             <li>
                 <a href="/settings/auth/user/{{ user.id }}">Settings</a>
             </li>
+            <li>
+                <a href="/settings/app/userprofile/{{ user.UserProfile.id }}">Profile</a>
+            </li>
 
             {% endif %}
             <li>
