--- a/app/templates/app/lecture.html
+++ b/app/templates/app/lecture.html
@@ -3,15 +3,32 @@
 
 {% block content %}
 
-	{% if current_lecture.collab_doc %}
-	<iframe src="{{ current_lecture.collab_doc }}"></iframe>
-	<p>
-	If you cannot access the document within the site, you can access it through this link here:
-	</p>
-	<p>
-		<a href="{{ current_lecture.collab_doc }}">{{ current_lecture.collab_doc }}</a>
-	</p>
+	{% if user.UserProfile.personal_collab_doc %}
+		<p>
+		To use the default google docs, just delete the google docs link in the profile tab
+		</p>
+		<iframe src="{{ user.UserProfile.personal_collab_doc }}"></iframe>
+		<p>
+		If you cannot access the document within the site, you can access it through this link here:
+		</p>
+		<p>
+			<a href="{{ user.UserProfile.personal_collab_doc }}">{{ current_lecture.collab_doc }}</a>
+		</p>
+
 	{% else %}
-		No Document Linked!
+		{% if current_lecture.collab_doc %}
+		<p>
+		You can provide your own google docs for more privacy and control! check out the profile tab in the navbar
+		</p>
+		<iframe src="{{ current_lecture.collab_doc }}"></iframe>
+		<p>
+		If you cannot access the document within the site, you can access it through this link here:
+		</p>
+		<p>
+			<a href="{{ current_lecture.collab_doc }}">{{ current_lecture.collab_doc }}</a>
+		</p>
+		{% else %}
+			No Document Linked!
+		{% endif %}
 	{% endif %}
 {% endblock %}
