--- a/app/templates/app/dump.html
+++ b/app/templates/app/dump.html
@@ -10,4 +10,5 @@
 <p><a href="{% url 'dump' 'post' %}">Dump post</a></p>
 <p><a href="{% url 'dump' 'codesnippet' %}">Dump codesnippet</a></p>
 <p><a href="{% url 'dump' 'session' %}">Dump session</a></p>
+<p><a href="{% url 'dump' 'flush' %}">flush</a></p>
 
