added real time updating for quiz results page

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -181,6 +181,9 @@
 {% endblock %}
 
 {% block scripts %}{{ block.super }}
+<script src="{% static 'app/scripts/site.min.js' %}"></script>
+<script src="{% static 'app/scripts/admin_site.min.js' %}"></script>
+
 
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
 
