--- a/app/templates/admin/quiz_results_detail.html
+++ b/app/templates/admin/quiz_results_detail.html
@@ -1,71 +1,81 @@
 {% extends "admin/admin_layout.html" %}
 
 {% block content %}
+<div id="quiz-results-div">
 
-Submissions collected: {{ submission_count }}
+	Submissions collected: {{ submission_count }}
 
 
-<table class="table">
-	<thead>
-		<tr>
-			<th>{{quiz.question}}</th>
-		</tr>
-	</thead>
-	<tbody>
-		{% if quizchoices %}
-			{% for quiz_choice in quiz_choices_summary %}
-				<tr>
-					<td>{{quiz_choice.choice}}</td>
-					<td>
-						  <div class="progress-bar {% cycle 'progress-bar-info' 'progress-bar-success' 'progress-bar-warning' 'progress-bar-danger'%}" role="progressbar" style="min-width: 2em; width: {{quiz_choice.relative_percentage}}%;">
-						  	{{quiz_choice.times_chosen}}
-								</div>
-						</td>
-				</tr>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>{{quiz.question}}</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% if quizchoices %}
+				{% for quiz_choice in quiz_choices_summary %}
+					<tr>
+						<td>{{quiz_choice.choice}}</td>
+						<td>
+							  <div class="progress-bar {% cycle 'progress-bar-info' 'progress-bar-success' 'progress-bar-warning' 'progress-bar-danger'%}" role="progressbar" style="min-width: 2em; width: {{quiz_choice.relative_percentage}}%;">
+							  	{{quiz_choice.times_chosen}}
+									</div>
+							</td>
+					</tr>
+				{% endfor %}
+			{% endif %}
+		</tbody>
+	</table>
+
+
+
+	Submission details
+	<table class="table">
+		<thead>
+			<tr>
+				<th>
+					User
+				</th>
+				<th>
+					Submission
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+		{% if quizchoiceselecteds %}
+			{% for quizchoiceselected in quizchoiceselecteds %}
+			<tr>
+				<td>
+					{{quizchoiceselected.User.username}}
+				</td>
+				<td>
+					{{quizchoiceselected.QuizChoice.choice}}
+				</td>
+			</tr>
+			{% endfor %}
+		{% else %}
+			{% for answer in answers %}
+			<tr>
+				<td>
+					{{answer.User.username}}
+				</td>
+				<td>
+					{{answer.answer}}
+				</td>
+			</tr>
 			{% endfor %}
 		{% endif %}
-	</tbody>
-</table>
+		</tbody>
+	</table>
+</div>
+{% endblock %}
 
-
-
-Submission details
-<table class="table">
-	<thead>
-		<tr>
-			<th>
-				User
-			</th>
-			<th>
-				Submission
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-	{% if quizchoiceselecteds %}
-		{% for quizchoiceselected in quizchoiceselecteds %}
-		<tr>
-			<td>
-				{{quizchoiceselected.User.username}}
-			</td>
-			<td>
-				{{quizchoiceselected.QuizChoice.choice}}
-			</td>
-		</tr>
-		{% endfor %}
-	{% else %}
-		{% for answer in answers %}
-		<tr>
-			<td>
-				{{answer.User.username}}
-			</td>
-			<td>
-				{{answer.answer}}
-			</td>
-		</tr>
-		{% endfor %}
-	{% endif %}
-	</tbody>
-</table>
-
+{% block scripts %}{{ block.super }}
+<script type="text/javascript">
+	var ping_interval = 1000
+	setInterval(function() {
+		$("#quiz-results-div").load(" #quiz-results-div", function() {$(this).children().unwrap()});
+	}, ping_interval);
+</script>
 {% endblock %}
